--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Webpack configuration to learn",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack.config.dev.js",
+    "dev": "webpack-dev-server --hot --inline --progress --colors --config config/webpack.config.dev.js",
+    "start": "npm run dev",
+    "build": "webpack --progress --colors --config config/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,16 +34,17 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
+    "less-loader": "^4.1.0",
     "react-hot-loader": "^4.8.4",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.2",
     "webpack-dev-server": "^3.3.1",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.11",
