--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
   "presets": [
-    "@babel/preset-react",
-    "@babel/preset-env"
+    "es2015",
+    "react"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "react-hot-loader/babel"
-  ]
+  "plugins": ["transform-decorators-legacy","transform-class-properties", "transform-object-rest-spread"],
+  "env": {
+    "development": {
+      "presets": ["react", "es2015"]
+    }
+  }
 }
