--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Webpack configuration to learn",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --progress --colors --config config/webpack.config.dev.js",
+    "clean": "rimraf dist/dll/*",
+    "build:dll": "npm run clean && webpack --config config/webpack.config.dll.js",
+    "build:webpack": "rimraf dist/* && cross-env NODE_ENV=prod webpack --config config/index.js",
+    "build": "npm run clean && npm run build:dll && npm run build:webpack",
+    "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
-    "build": "webpack --progress --colors --config config/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,22 +27,28 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^6.4.1",
     "babel-plugin-import": "^1.11.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
+    "webpack-api-mocker": "^1.6.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.2",
     "webpack-dev-server": "^3.3.1",
@@ -47,8 +56,13 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.0"
   }
 }
