--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,39 @@
 {
-  "presets": [
-    "es2015",
-    "react"
-  ],
-  "plugins": ["transform-decorators-legacy","transform-class-properties", "transform-object-rest-spread"],
   "env": {
-    "development": {
-      "presets": ["react", "es2015"]
+    "dev": {
+      "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+      ],
+      "plugins": [
+        "react-hot-loader/babel",
+        "transform-decorators-legacy",
+        "transform-function-bind",
+        "transform-es3-member-expression-literals",
+        "transform-es3-property-literals",
+        "transform-object-rest-spread",
+        "transform-class-properties",
+        ["transform-runtime", {"polyfill": false}]
+      ]
+    },
+    "prod": {
+      "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+      ],
+      "plugins": [
+        "transform-decorators-legacy",
+        "transform-function-bind",
+        "transform-es3-member-expression-literals",
+        "transform-es3-property-literals",
+        "transform-object-rest-spread",
+        "transform-class-properties",
+        ["transform-runtime", {"polyfill": false}],
+        "transform-react-constant-elements",
+        "transform-react-remove-prop-types"
+      ]
     }
   }
 }
