--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
+    "object-assign": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router": "^5.0.0"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0"
   }
 }
