--- a/.babelrc
+++ b/.babelrc
@@ -9,9 +9,6 @@
       "plugins": [
         "react-hot-loader/babel",
         "transform-decorators-legacy",
-        "transform-function-bind",
-        "transform-es3-member-expression-literals",
-        "transform-es3-property-literals",
         "transform-object-rest-spread",
         "transform-class-properties",
         ["transform-runtime", {"polyfill": false}]
@@ -25,14 +22,9 @@
       ],
       "plugins": [
         "transform-decorators-legacy",
-        "transform-function-bind",
-        "transform-es3-member-expression-literals",
-        "transform-es3-property-literals",
         "transform-object-rest-spread",
         "transform-class-properties",
-        ["transform-runtime", {"polyfill": false}],
-        "transform-react-constant-elements",
-        "transform-react-remove-prop-types"
+        ["transform-runtime", {"polyfill": false}]
       ]
     }
   }
