--- a/.babelrc
+++ b/.babelrc
@@ -1,30 +1,49 @@
 {
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": "6",
+          "browsers": [
+            "last 2 versions"
+          ]
+        },
+        "loose": false,
+        "modules": false,
+        "useBuiltIns": true
+      }
+    ],
+    "es2015",
+    "stage-0",
+    "react"
+  ],
   "env": {
     "dev": {
-      "presets": [
-        "es2015",
-        "stage-0",
-        "react"
-      ],
       "plugins": [
         "react-hot-loader/babel",
         "transform-decorators-legacy",
         "transform-object-rest-spread",
         "transform-class-properties",
-        ["transform-runtime", {"polyfill": false}]
+        [
+          "transform-runtime",
+          {
+            "polyfill": false
+          }
+        ]
       ]
     },
     "prod": {
-      "presets": [
-        "es2015",
-        "stage-0",
-        "react"
-      ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-object-rest-spread",
         "transform-class-properties",
-        ["transform-runtime", {"polyfill": false}]
+        [
+          "transform-runtime",
+          {
+            "polyfill": false
+          }
+        ]
       ]
     }
   }
