--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dest/dll/*",
     "build:dll": "npm run clean && webpack --config config/webpack.config.dll.js",
-    "build:webpack": "rimraf dest/* && cross-env NODE_ENV=prod webpack --config config/index.js",
+    "build:webpack": "rimraf dest/dev/* && cross-env NODE_ENV=prod webpack --config config/index.js",
     "build": "npm run clean && npm run build:dll && npm run build:webpack",
     "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
@@ -40,6 +40,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
+    "colors": "^1.3.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
