--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
@@ -62,8 +63,11 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "antd": "^3.18.1",
     "axios": "^0.18.0",
+    "bluebird": "^3.5.4",
     "classnames": "^2.2.6",
+    "detect-browser": "^4.5.0",
     "echarts": "^4.2.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
