--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Webpack configuration to learn",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf dest/dll/*",
-    "build:dll": "npm run clean && webpack --config config/webpack.config.dll.js",
-    "build:webpack": "rimraf dest/dev/* && cross-env NODE_ENV=prod webpack --config config/index.js",
-    "build": "npm run clean && npm run build:dll && npm run build:webpack",
+    "clean": "rimraf dest/dll-dev/* dest/dll-prod/*",
+    "dll": "npm run clean && webpack --config config/webpack.config.dll.js",
+    "build": "npm run clean && npm run dll && npm run prod",
+    "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/index.js",
     "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
