--- a/.babelrc
+++ b/.babelrc
@@ -30,6 +30,14 @@
         "polyfill": false,
         "regenerator": true
       }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": true
+      }
     ]
   ],
   "ignore": [
