--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     "react/no-danger": [0],
     "array-callback-return": 0,
     "class-methods-use-this": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/require-default-props": 0,
     "react/forbid-prop-types": [0],
     "jsx-a11y/no-static-element-interactions": [0],
