--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/index.js",
     "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
+    "mock": "node ./mock/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,19 +37,23 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
     "colors": "^1.3.3",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "mockjs": "^1.0.1-beta3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
@@ -65,6 +70,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "echarts": "^4.2.1",
+    "express": "^4.16.4",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
