--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "mockjs": "^1.0.1-beta3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "plop": "^2.3.0",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
