--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dest/dll-dev/* dest/dll-prod/*",
-    "dll": "npm run clean && webpack --config config/webpack.config.dll.js",
+    "dll": "npm run clean && node config/webpack.config.dll.js",
     "build": "npm run clean && npm run dll && npm run prod",
     "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/index.js",
     "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
@@ -46,6 +46,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "express": "^4.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -75,7 +76,6 @@
     "classnames": "^2.2.6",
     "detect-browser": "^4.5.0",
     "echarts": "^4.2.1",
-    "express": "^4.16.4",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
