--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/index.js",
     "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
-    "mock": "node ./mock/server.js",
+    "mock": "node ./mock/mock-start.js",
+    "mock2": "node ./mock/mock2/mock-start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chokidar": "^3.0.0",
     "clean-webpack-plugin": "^2.0.1",
     "colors": "^1.3.3",
     "copy-webpack-plugin": "^5.0.3",
@@ -54,6 +56,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
     "mockjs": "^1.0.1-beta3",
+    "nodemon": "^1.19.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "plop": "^2.3.0",
     "postcss-loader": "^3.0.0",
