--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dest/dll-dev/* dest/dll-prod/*",
-    "dll": "npm run clean && node config/webpack.config.dll.js",
+    "dll": "npm run clean && node config/webpack-config/webpack.config.dll.js",
     "build": "npm run clean && npm run dll && npm run prod",
-    "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/index.js",
-    "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/index.js --hot --inline --progress --colors --mode development",
+    "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/build-config/index.js",
+    "dev": "cross-env HOST=true NODE_ENV=dev webpack-dev-server --config config/build-config/index.js --hot --inline --progress --colors --mode development",
     "start": "npm run dev",
     "mock": "node ./mock/mock-start.js",
     "mock2": "node ./mock/mock2/mock-start.js",
@@ -47,7 +47,7 @@
     "colors": "^1.3.3",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
+    "css-loader": "^1.0.1",
     "express": "^4.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -66,6 +66,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-api-mocker": "^1.6.6",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.2",
     "webpack-dev-server": "^3.3.1",
@@ -87,6 +88,7 @@
     "object-assign": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.0"
   }
 }
