--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/ganyanlins/webpack#readme",
   "devDependencies": {
     "@moyuyc/parse-git-config": "^2.0.2",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
