--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dll": "npm run clean && node config/webpack-config/webpack.config.dll.js",
     "build": "npm run clean && npm run dll && npm run prod",
     "prod": "rimraf dest/prod/* && cross-env NODE_ENV=prod webpack --config config/build-config/index.js",
-    "dev": "node ./config/build-config/config.dev.server.js",
+    "dev": "node ./config/build-config/dev.server.js",
     "start": "npm run dev",
     "mock": "node ./mock/mock-start.js",
     "mock2": "node ./mock/mock2/mock-start.js",
@@ -52,6 +52,7 @@
     "express": "^4.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
