--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
+    "superagent": "^2.2.0",
+    "superagent-bluebird-promise": "^4.2.0",
+    "superagent-no-cache": "^0.1.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
@@ -82,6 +85,7 @@
     "classnames": "^2.2.6",
     "detect-browser": "^4.5.0",
     "echarts": "^4.2.1",
+    "history": "^4.9.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
@@ -91,6 +95,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-router": "^3.2.1",
     "react-router-dom": "^5.0.0"
   }
 }
